--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -17,7 +17,7 @@
            width: 40%;
        }
        .max_sizer{
-           overflow: hidden;
+           overflow: scroll;
            max-height: 500px;
            margin-top: 20px;
        }
